Remove extra newline
The output from `openssl dgst` always ends with a newline.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -169,8 +169,7 @@ jobs:
             llvm/llvm-project@${{ needs.build.outputs.llvm_commit }}
 
             ```
-            ${{ fromJSON(steps.hash_artifacts.outputs.hash_list_json) }}
-            ```
+            ${{ fromJSON(steps.hash_artifacts.outputs.hash_list_json) }}```
 
             build logs: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
