Configure the build with a real CMake script instead of `cmake-defines.txt`
This will let us use CMake features to change settings per platform. For now, we can at least stop using `grep` to implement comments.

To verify this produced the same configuration as before, I ran:

```
cmake -B build1 $(grep -v '^#' cmake-defines.txt) llvm-project/llvm
cmake -B build1 -N -L | sort > cmake-cache-before.txt

cmake -B build2 -C BuildSettings.txt llvm-project/llvm
cmake -B build2 -N -L | sort > cmake-cache-after.txt

diff cmake-cache-before.txt cmake-cache-after.txt
```

... and the only difference was in a variable that included the full build directory.

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -71,12 +71,10 @@ jobs:
             export CXX=clang++
           fi
 
-          # Add options from `cmake-defines.txt` to the command line, but
-          # treat lines that start with `#` as comments and remove them.
           cmake \
               -G Ninja \
               -B build \
-              $(grep -v '^#' cmake-defines.txt) \
+              -C BuildSettings.txt \
               llvm-project/llvm
 
       - name: add Bazel files
