--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -104,7 +104,7 @@ jobs:
 
       # Print the archive hash to the build log for traceability.
       - name: hash
-        run: openssl dgst -sha256 -r llvm.tar.xz
+        run: cmake -E sha256sum llvm.tar.xz
 
       - name: upload artifact
         uses: actions/upload-artifact@v2
@@ -142,12 +142,12 @@ jobs:
 
       - name: hash artifacts
         id: hash_artifacts
-        # Use `jq` to encode the output of `openssl dgst` as a JSON string.
+        # Use `jq` to encode the `sha256sum` output as a JSON string.
         # We can't use `set-output` to output a multiline string, so instead we
         # output a string with `\n`s in it and JSON-decode it on use.
         run: |
           echo -n '::set-output name=hash_list_json::'
-          openssl dgst -sha256 -r llvm-*.tar.xz | jq -Rs .
+          cmake -E sha256sum llvm-*.tar.xz | jq -Rs .
 
       # Include LLVM commit from the builder in the release message.
       # Oddly, the output from a matrixed job is returned as a single value --
